feat(cv): update install and build commands, enhancing latexmk flags

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -75,7 +75,7 @@
 
 % macro: Project
 \newcommand{\Project}[3]{%
-    \noindent \testbf{#1}
+    \noindent \textbf{#1}
     \hfill \text{#2} \newline
     \small Source: \textit{#3}
     \vspace*{0.5em}
@@ -190,8 +190,8 @@ Served as team lead (mobile, cross-functional teams) and architect for the last 
     \item Developed brand new version of \textit{BetterMe: Weight Loss Workouts} iOS application getting away from VIPER to the Redux. 
     \item Developed bunch of Ruby scripts using Fastlane as a primary tool for a daily work tasks automatization.
 \end{itemize}
-\newline \noindent
-Top-3 applications with my contribution: 
+
+\noindent Top-3 applications with my contribution: 
 \href{https://apps.apple.com/us/app/betterme-weight-loss-workouts/id1264546236}{Health Coaching}, 
 \href{https://apps.apple.com/us/app/betterme-calm-sleep-meditate/id1363010081}{Mental Health}, 
 \href{https://apps.apple.com/us/app/betterme-walking-weightloss/id1434400695}{Walking Workouts}.
