feat(cv): add the latest Wurthy experience section as FE

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -116,7 +116,7 @@ My primary areas of expertise include FinTech, Social, Healthcare, and Health \&
 \Experience
 {Senior iOS Engineer}
 {Jul 2024 -- Jan 2025}
-{\href{https://www.loblawdigital.co}{Loblaw Digital}}
+{\href{https://www.loblawdigital.co}{Loblaw Digital} (Top-1 Canadian retailer)}
 
 \noindent
 \begin{itemize}[label=-]
@@ -129,37 +129,39 @@ My primary areas of expertise include FinTech, Social, Healthcare, and Health \&
 \SubSectionSpacing
 
 \Experience
-{Software Engineer, Founder}
-{Dec 2023 -- Present}
-{\href{https://finitetimespace.com}{Finite Timespace LLC}}
+{Software Engineer}
+{Nov 2023 -- Jan 2025}
+{\href{https://www.wurthy.co}{Wurthy} (Profitable solutions for growing businesses)}
 
 \noindent
 \begin{itemize}[label=-]
-    \setlength\itemsep{0cm}
-    \item Responsible for providing hands on engineering and consulting for businesses and startups. 
-      Main areas are Apple platforms (iOS, macOS, tvOS) and web (frontend) applications (React, Next).
+  \setlength\itemsep{0em}
+  \item Developed a business web application (boost sales and generate monthly recurring revenue) and a customer web application (flexible checkout experience for buyers).
+  \item Built both web apps using \textbf{Next.js 15, React v19, Tailwind, Postgres (Supabase), and Prisma ORM}.
+  \item Built AI-driven customer workflows with \textbf{custom AI agents} to verify buyers' financial status and assess business risk profiles.
 \end{itemize}
 
 \SubSectionSpacing
 
 \Experience
-{Founding Software Engineer}
-{Jan 2023 -- Present}
-{\href{https://www.wurthy.co}{Wurthy} (US platform of making P2P payments over time)}
+{Founding iOS Engineer}
+{Jan 2023 -- Oct 2023}
+{\href{https://www.wurthy.co}{Wurthy} (Make P2P payments over time)}
 
 \noindent
 \begin{itemize}[label=-]
-    \setlength\itemsep{0em}
-    \item Released a brand new {\href{https://apps.apple.com/us/app/wurthy/id6446956833}{iOS application}} in a \textbf{6 months} term. Develop the app during the first \textbf{50 customers} on board.
-    \item Recruited, onboarded, and managed a \textbf{team of 3 iOS engineers}, adopting Agile and Kanban practices through the mobile iOS team.
-    \item Leaded technical aspects of the project. The application has been divided into multiple modules (Domain, Service, and Application). Supported \textbf{up to 70\%} of the test coverage in the Service layer.
-    \item Developed iOS application with the \textbf{16+ iOS SDK target}, using the latest frameworks and tools, e.g. SwiftUI, async/await, and navigation stack routing.
+  \setlength\itemsep{0em}
+  \item Developed an MVP iOS application to deliver a brand-new \textbf{”Buy now, pay later" C2C} experience. 
+    \textit{Sunset the iOS app} after the product pivot shifting to B2C PaaS.
+  \item Managed a \textbf{team of 3 iOS engineers}. Led the technical aspects of the project.
+  \item Established the minimal target tech stack for iOS 16+, including \textbf{SwiftUI, NavigationStack routing, async/await}. 
+    Divided the codebase into Domain, Service, and Application modules.
 \end{itemize}
 
 \SubSectionSpacing
 
 \Experience
-{Software engineer (Web Frontend, macOS)}
+{Software Engineer (Web Frontend, macOS)}
 {Jun 2022 -- Nov 2022}
 {\href{https://www.fluxon.com/}{Fluxon} (Product and outsourcing development distributed company)}
 
@@ -178,7 +180,7 @@ My primary areas of expertise include FinTech, Social, Healthcare, and Health \&
 \Experience
 {Senior iOS Engineer}
 {Jan 2020 -- Apr 2022}
-{\href{https://www.life360.com}{Life360 Inc.}}
+{\href{https://www.life360.com}{Life360 Inc.} (Family safety through location sharing)}
 
 \noindent
 \begin{itemize}[label=-]
@@ -194,7 +196,7 @@ My primary areas of expertise include FinTech, Social, Healthcare, and Health \&
 \Experience
 {iOS Software Engineer}
 {Nov 2018 -- Dec 2019}
-{\href{https://betterme.world/about}{BetterMe USA}}
+{\href{https://betterme.world/about}{BetterMe USA} (Personalized holistic wellness solution)}
 
 \noindent
 \begin{itemize}[label=-]
