feat(cv): update summary section, fix grammar

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -104,10 +104,10 @@
 \SectionSpacing
 
 \noindent
-Software engineer with over 10 years of experience in developing software for Apple platforms (iOS, macOS, tvOS) and the frontend of web applications (React, Next).
-For the past 5 years, I have exclusively worked in distributed software development teams. 
-I have served as a team lead or as a software architect across various mobile and cross-functional projects. 
-My primary areas of expertise include FinTech, Social, Healthcare, and Health \& Fitness.
+Software engineer with over 10 years of experience in developing software for Apple platforms (iOS, macOS, tvOS) and web applications (React, Next).
+For the past 5 years, I have exclusively worked in distributed software development teams.
+I have served as a team lead or a software architect across various mobile and cross-functional projects.
+My primary areas of expertise include FinTech, Social, Healthcare, and Health \& Fitness. 
 
 %% Experience
 
@@ -170,7 +170,7 @@ My primary areas of expertise include FinTech, Social, Healthcare, and Health \&
     \setlength\itemsep{0em}
     \item Developed the front-end part of the \href{https://taki.app}{taki.app}. 
       Technologies included TypeScript, React, Next.js, GCP, Firebase and Firestore.
-    \item Leaded the development of the \href{https://apps.apple.com/in/app/notiblast/id6443910263}{Notiblast} macOS application.
+    \item Led the development of the \href{https://apps.apple.com/in/app/notiblast/id6443910263}{Notiblast} macOS application.
       App's goal is to remind about the upcoming meeting in your Google calendar, blasting upfront on your screen. 
       Technologies included Swift, SwiftUI / AppKit, Combine and XCTests.
 \end{itemize}
