feat(cv): update headliner

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -104,10 +104,10 @@
 \SectionSpacing
 
 \noindent
-Software engineer with over 10 years of experience in developing software for Apple platforms (iOS, macOS, tvOS) and web applications (React, Next).
-For the past 5 years, I have exclusively worked in distributed software development teams.
-I have served as a team lead or a software architect across various mobile and cross-functional projects.
-My primary areas of expertise include FinTech, Social, Healthcare, and Health \& Fitness. 
+Software engineer with over 10 years of experience developing software for Apple platforms (iOS, macOS). 
+I occasionally step into other roles, such as full-stack engineer (React, Next.js), while maintaining my core focus on Apple ecosystems. 
+I have served as a team lead and software architect on various mobile projects and have worked exclusively in distributed software development teams. 
+My domain areas include FinTech, Social, Healthcare, and Health \& Fitness.
 
 %% Experience
 
