feat(cv): rebuilt experience subsections

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -115,64 +115,44 @@ My domain areas include FinTech, Social, Healthcare, and Health \& Fitness.
 
 \Experience
 {Senior iOS Engineer}
+{Dec 2023 — Oct 2025}
+{\href{https://finitetimespace.com}{Finite Timespace LLC}}
+
+\noindent
+\begin{itemize}[label=-]
+  \setlength\itemsep{0cm}
+\item Provide hands‑on engineering and technical consulting for businesses and startups, focusing on Apple platforms -- iOS, macOS, watchOS, tvOS.
+\end{itemize}
+
+\SubSectionSpacing
+
+
+\Experience
+{Senior iOS Engineer}
 {Jul 2024 -- Jan 2025}
 {\href{https://www.loblawdigital.co}{Loblaw Digital} (Top-1 Canadian retailer)}
 
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0cm}
-  \item Built a new \textbf{subscription mechanism for physical products} in stores, enabling users to subscribe to products they order consistently without needing to reorder manually each time.
-  \item Developed the knowledge base for the iOS team using Coda.io, creating \textbf{dozens of internal documents} to structure the iOS app architecture by layers. 
-  \item Led a technical proposal to introduce the \textbf{Single Responsibility Principle (SOLID)} by extending the MVVM architecture with the “UseCase” layer, streamlining unit test creation. 
+\item \textbf{Designed and delivered} a new subscription system for in-store physical products, allowing users to manage recurring orders automatically (no need to reorder manually).
+\item Championed the introduction of a \textbf{UseCase} domain layer within the iOS architecture, improving testability for the entire iOS eng team.
 \end{itemize}
 
 \SubSectionSpacing
 
 \Experience
-{Software Engineer}
+{Founding Software Engineer}
 {Nov 2023 -- Jan 2025}
 {\href{https://www.wurthy.co}{Wurthy} (Profitable solutions for growing businesses)}
 
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-  \item Developed a business web application (boost sales and generate monthly recurring revenue) and a customer web application (flexible checkout experience for buyers).
-  \item Built both web apps using \textbf{Next.js 15, React v19, Tailwind, Postgres (Supabase), and Prisma ORM}.
-  \item Built AI-driven customer workflows with \textbf{custom AI agents} to verify buyers' financial status and assess business risk profiles.
-\end{itemize}
-
-\SubSectionSpacing
-
-\Experience
-{Founding iOS Engineer}
-{Jan 2023 -- Oct 2023}
-{\href{https://www.wurthy.co}{Wurthy} (Make P2P payments over time)}
-
-\noindent
-\begin{itemize}[label=-]
-  \setlength\itemsep{0em}
-  \item Developed an MVP iOS application to deliver a brand-new \textbf{”Buy now, pay later" C2C} experience. 
-    \textit{Sunset the iOS app} after the product pivot shifting to B2C PaaS.
-  \item Managed a \textbf{team of 3 iOS engineers}. Led the technical aspects of the project.
-  \item Established the minimal target tech stack for iOS 16+, including \textbf{SwiftUI, NavigationStack routing, async/await}. 
-    Divided the codebase into Domain, Service, and Application modules.
-\end{itemize}
-
-\SubSectionSpacing
-
-\Experience
-{Software Engineer (Web Frontend, macOS)}
-{Jun 2022 -- Nov 2022}
-{\href{https://www.fluxon.com/}{Fluxon} (Product and outsourcing development distributed company)}
-
-\noindent
-\begin{itemize}[label=-]
-    \setlength\itemsep{0em}
-    \item Developed the front-end part of the \href{https://taki.app}{taki.app}. 
-      Technologies included TypeScript, React, Next.js, GCP, Firebase and Firestore.
-    \item Led the development of the \href{https://apps.apple.com/in/app/notiblast/id6443910263}{Notiblast} macOS application.
-      App's goal is to remind about the upcoming meeting in your Google calendar, blasting upfront on your screen. 
-      Technologies included Swift, SwiftUI / AppKit, Combine and XCTests.
+\item Built and delivered the MVP iOS app delivering a new C2C Buy‑Now‑Pay‑Later experience. Designed architecture (MVVM+Coordinator) and managed a team of 3 iOS engineers.
+\item Sunset the iOS product after company pivot to B2B category, driving transition planning and team realignment.
+\item Developed a business web app (boosting sales and enabling monthly recurring revenue) and a customer web app (flexible checkout flow for buyers).
+  \item Built products using Next.js, React 19, Tailwind, Postgress (Supabase), Prisma ORM.
 \end{itemize}
 
 \SubSectionSpacing
