feat(cv): reshape experience sections

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -97,8 +97,8 @@
 \SectionSpacing
 
 \noindent
-\href{mailto:hamsternik9@gmail.com}{hamsternik9@gmail.com} \text{\textbar}
-\href{https://github.com/hamsternik}{github.com/hamsternik} \text{\textbar}
+\href{mailto:hamsternik9@gmail.com}{hamsternik9@gmail.com} \textbar\
+\href{https://github.com/hamsternik}{github.com/hamsternik} \textbar\
 \href{https://www.linkedin.com/in/nkhomitsevych/}{linkedin.com/in/nkhomitsevych}
 
 \SectionSpacing
@@ -114,61 +114,58 @@ My domain areas include FinTech, Social, Healthcare, and Health \& Fitness.
 \subsection*{Experience}
 
 \Experience
-{Senior iOS Engineer}
+{Senior iOS Engineer \textbar\ Lead Engineer}
 {Dec 2023 — Oct 2025}
 {\href{https://finitetimespace.com}{Finite Timespace LLC}}
 
 \noindent
-\begin{itemize}[label=-]
-  \setlength\itemsep{0cm}
-\item Provide hands‑on engineering and technical consulting for businesses and startups, focusing on Apple platforms -- iOS, macOS, watchOS, tvOS.
-\end{itemize}
-
-\SubSectionSpacing
-
-
-\Experience
-{Senior iOS Engineer}
-{Jul 2024 -- Jan 2025}
-{\href{https://www.loblawdigital.co}{Loblaw Digital} (Top-1 Canadian retailer)}
+Provide hands‑on engineering and technical consulting for businesses and startups,
+  focusing on Apple platforms -- iOS, macOS, watchOS, tvOS.
 
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0cm}
-\item \textbf{Designed and delivered} a new subscription system for in-store physical products, allowing users to manage recurring orders automatically (no need to reorder manually).
-\item Championed the introduction of a \textbf{UseCase} domain layer within the iOS architecture, improving testability for the entire iOS eng team.
+\item Wurthy: Developed a business web app (boosting sales and enabling monthly recurring revenue)
+  and a customer web app (flexible checkout flow for buyers). Built products using
+  \textbf{Next.js, React 19, Tailwind, Postgress (Supabase), Prisma ORM}.
+\item Loblaw Digital: Designed and delivered a \textbf{new subscription system} for in-store physical products,
+  allowing users to manage recurring orders automatically (no need to reorder manually).
+\item Loblaw Digital: Championed the introduction of a \textbf{UseCase} domain layer within the iOS architecture,
+  improving testability for the entire iOS eng team.
 \end{itemize}
 
 \SubSectionSpacing
 
 \Experience
-{Founding Software Engineer}
-{Jan 2023 -- Jan 2025}
+{Founding iOS Engineer}
+{Jan 2023 -- Oct 2023}
 {\href{https://www.wurthy.co}{Wurthy} (Profitable solutions for growing businesses)}
 
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item Built and delivered the MVP iOS app delivering a new C2C Buy‑Now‑Pay‑Later experience. Designed architecture (MVVM+Coordinator) and managed a team of 3 iOS engineers.
-\item Sunset the iOS product after company pivot to B2B category, driving transition planning and team realignment.
-\item Developed a business web app (boosting sales and enabling monthly recurring revenue) and a customer web app (flexible checkout flow for buyers).
-  \item Built products using Next.js, React 19, Tailwind, Postgress (Supabase), Prisma ORM.
+\item Built and delivered the MVP iOS app delivering a new C2C Buy‑Now‑Pay‑Later experience.
+  Designed architecture (MVVM+Coordinator) and managed a team of 3 iOS engineers.
+\item Sunset the iOS product after company pivot to B2B category, driving
+  transition planning and team realignment.
 \end{itemize}
 
 \SubSectionSpacing
 
 \Experience
 {Senior iOS Engineer}
-{Jan 2020 -- Nov 2022}
+{Jan 2020 -- Apr 2022}
 {\href{https://www.life360.com}{Life360 Inc.} (Family safety through location sharing)}
 
 \noindent
 \begin{itemize}[label=-]
-    \setlength\itemsep{0em}
-    \item Managed a \textbf{team of 4 mobile developers (Android and iOS)}, tackling requirements processing, delivery responsibilities and people management. 
-    \item Developed Lead Generation feature to provide specific offers for customers from auto insurance companies (30+ million MAU, end of Q1 2022).
-    \item Developed user's driving experience workflow, created brand new \textit{Driving} tab to see driving statistics and promote safe driving. 
-      Technologies included Swift, UIKit, RxSwift, Uber RIBs, XCTests.
+  \setlength\itemsep{0em}
+\item Managed a \textbf{team of 4 mobile developers (Android and iOS)}, tackling requirements processing,
+  delivery responsibilities and people management. 
+\item Designed and led the Lead Generation feature to provide \textbf{personalized auto insurance plans}
+  for customers \textit{(30+ million MAU, end of Q1 2022)}.
+\item Developed user's driving experience workflow, created brand new \textit{Driving} tab to see driving statistics
+  and promote safe driving. Technologies included Swift, UIKit, RxSwift, Uber RIBs, XCTests.
 \end{itemize}
 
 \SubSectionSpacing
@@ -180,10 +177,12 @@ My domain areas include FinTech, Social, Healthcare, and Health \& Fitness.
 
 \noindent
 \begin{itemize}[label=-]
-    \setlength\itemsep{0em}
-    \item Most of my contributions were in the \href{https://apps.apple.com/us/app/betterme-weight-loss-workouts/id1264546236}{Health Coaching} and \href{https://apps.apple.com/us/app/betterme-calm-sleep-meditate/id1363010081}{Mental Health} apps including building both apps from scratch using the Redux architecture. 
-      I also rewrote the entire BetterMe: Weight Loss Workouts app, transitioning it from VIPER to Redux.
-    \item Developed a series of Fastlane scripts on Ruby to build an automated CI/CD pipeline, such as uploading new strings for localization in over 10 languages.
+  \setlength\itemsep{0em}
+\item Most of my contributions were in the
+  \href{https://apps.apple.com/us/app/betterme-weight-loss-workouts/id1264546236}{Health Coaching} and
+  \href{https://apps.apple.com/us/app/betterme-calm-sleep-meditate/id1363010081}{Mental Health} apps
+  including building both apps from scratch using the Redux architecture.
+\item Migrate an entire 'Mental Helth' iOS application \textbf{from VIPER to Redux} architecture.
 \end{itemize}
 
 \SubSectionSpacing
@@ -196,10 +195,10 @@ My domain areas include FinTech, Social, Healthcare, and Health \& Fitness.
 \noindent Project: \href{https://www.nuvocares.com/solutions}{Nuvo: applications for pregnant and doctor}.
 \noindent
 \begin{itemize}[label=-]
-    \setlength\itemsep{0em}
-    \item Developer iOS applications for manufactored FDA cleared device for remote nonstress tests for pregnant to monitor real-time health indicators.
-    \item Architectured and developed a separated SDK to deal with device via Bluetooth Classic. Supported FDA and MFi device certification from engineering side.
-    \item The application was designed to scale in mind using VIPER design pattern and BDD testing approach (Quick, Nimble).
+  \setlength\itemsep{0em}
+\item Developer iOS applications for manufactored FDA cleared device for remote nonstress tests for pregnant to monitor real-time health indicators.
+\item Architectured and developed a separated SDK to deal with device via Bluetooth Classic. Supported FDA and MFi device certification from engineering side.
+\item The application was designed to scale in mind using VIPER design pattern and BDD testing approach (Quick, Nimble).
 \end{itemize}
 
 %% Projects
