feat(cv): add tech stack subsection

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -17,8 +17,8 @@
     a4paper,
     left=20mm,
     %rigth=
-    bottom=15mm,
-    top=15mm
+    bottom=10mm,
+    top=10mm
 }
 
 \usepackage{sectsty}
@@ -200,6 +200,14 @@ Provide hands‑on engineering and technical consulting for businesses and start
 \item Architectured and developed a separated SDK to deal with device via Bluetooth Classic. Supported FDA and MFi device certification from engineering side.
 \item The application was designed to scale in mind using VIPER design pattern and BDD testing approach (Quick, Nimble).
 \end{itemize}
+
+%% Tech Stack
+
+\subsection*{Technical Stack}
+
+\noindent iOS Development: Swift, Objectve-C, SwiftUI, UIKit, GCD, RxSwift, Combine, XCTest, Apple's Human Interface Guidelines.\newline
+\noindent Mobile Infrastructure: Xcode, TestFlight, GitHub, GitHub Actions, CI/CD pipelines, Git, Jenkins, Ruby, Python, Fastlane, Make.\newline
+\noindent Application Design: MVC, VIPER, MVVM, MVVM-C, Redux, TCA.\newline
 
 %% Projects
 
