feat(cv): tinker tech stack section

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -196,9 +196,14 @@ Provide hands‑on engineering and technical consulting for businesses and start
 
 \subsection*{Technical Stack}
 
-\noindent iOS Development: Swift, Objectve-C, SwiftUI, UIKit, GCD, RxSwift, Combine, XCTest, Apple's Human Interface Guidelines.\newline
-\noindent Mobile Infrastructure: Xcode, TestFlight, GitHub, GitHub Actions, CI/CD pipelines, Git, Jenkins, Ruby, Python, Fastlane, Make.\newline
-\noindent Application Design: MVC, VIPER, MVVM, MVVM-C, Redux, TCA.\newline
+\noindent iOS Development: Swift (10+ years), Objective-C, SwiftUI, UIKit, Swift Concurrency (async/await, actors),
+structured concurrency, GCD, RxSwift, Combine, XCTest, Apple's Human Interface Guidelines.\newline
+\noindent Full-stack development: React, Next.js, TypeScript, backend integration (RESTful APIs, GraphQL),
+database design (PostgreSQL, Supabase).\newline
+\noindent Testing \& Quality: Unit testing (XCTest), integration testing, BDD (Quick, Nimble), end-to-end testing,
+Make, Fastlane, CI/CD automation, GitHub Actions, TestFlight.\newline
+\noindent Paradigms: Object-oriented design (OOP), Protocol-oriented design (POP), Functional programming patterns,
+MVC, Clean Architecture, VIPER, MVVM, Redux, TCA.\newline
 
 %% Projects
 
