cv: update references

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -1,5 +1,7 @@
-%% See the @yegor256 resume, boring version: https://github.com/yegor256/blog/blob/master/_latex/resume-boring.tex.
-% See the Alex Zverev resume (PDF): https://drive.google.com/file/d/1dce28zy8RqS2O_27oj1rTYiZoFWZ3-Ot/view.
+%% See the @yegor256 resume, boring version:
+%%% https://github.com/yegor256/blog/blob/master/_latex/resume-boring.tex.
+% See the Alex Zverev resume (PDF):
+%%% https://drive.google.com/file/d/1dce28zy8RqS2O_27oj1rTYiZoFWZ3-Ot/view.
 
 \documentclass[10pt]{article}
 \usepackage[english]{babel}
