--- a/cv/main.tex
+++ b/cv/main.tex
@@ -39,7 +39,7 @@
 
 % macro: sepspace
 \newcommand{\SectionSpacing}{ % vertical space separator between entries
-    \vspace*{1em}
+    \vspace*{0.75em}
 }
 
 \newcommand{\SubSectionSpacing}{
@@ -95,10 +95,10 @@
 \SectionSpacing
 
 \noindent
-Software engineer with over 10 years of experience developing software for Apple platforms (iOS, macOS). 
-I occasionally step into other roles, such as full-stack engineer (React, Next.js), while maintaining my core focus on Apple ecosystems. 
-I have served as a team lead and software architect on various mobile projects and have worked exclusively in distributed software development teams. 
-My domain areas include FinTech, Social, Healthcare, and Health \& Fitness.
+Software engineer with 10+ years developing for Apple platforms (iOS,
+macOS). Experience as team lead and architect on mobile projects in
+FinTech, Healthcare and Social domains. Occasional full-stack work
+(React, Next.js).
 
 %% Experience
 
@@ -196,16 +196,10 @@ Provide hands‑on engineering and technical consulting for businesses and start
 
 \subsection*{Technical Stack}
 
-\noindent iOS Development: Swift (10+ years), Objective-C, SwiftUI, UIKit, Swift Concurrency (async/await, actors),
-structured concurrency, GCD, RxSwift, Combine, XCTest, Apple's Human Interface Guidelines.\newline
-\noindent Full-stack development: React, Next.js, TypeScript, backend integration (RESTful APIs, GraphQL),
-database design (PostgreSQL, Supabase).\newline
-\noindent Testing \& Quality: Unit testing (XCTest), integration testing, BDD (Quick, Nimble), end-to-end testing,
-Make, Fastlane, CI/CD automation, GitHub Actions, TestFlight.\newline
-\noindent Paradigms: Object-oriented design (OOP), Protocol-oriented design (POP), Functional programming patterns,
-MVC, Clean Architecture, VIPER, MVVM, Redux, TCA.\newline
-
-%% Projects
+\noindent \textbf{iOS}: Swift, Objective-C, SwiftUI, UIKit, Swift Concurrency,
+Swift Testing, RxSwift, GCD, XCTest, Redux, MVVM.\\
+\noindent \textbf{Full-stack}: React, Next.js, TypeScript, PostgreSQL.
+\noident \textbf{Tools}: Make, Fastlane, GitHub Actions.
 
 %% Education
 
