cv: fix indent typo

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -198,8 +198,8 @@ Provide hands‑on engineering and technical consulting for businesses and start
 
 \noindent \textbf{iOS}: Swift, Objective-C, SwiftUI, UIKit, Swift Concurrency,
 Swift Testing, RxSwift, GCD, XCTest, Redux, MVVM.\\
-\noindent \textbf{Full-stack}: React, Next.js, TypeScript, PostgreSQL.
-\noident \textbf{Tools}: Make, Fastlane, GitHub Actions.
+\noindent \textbf{Full-stack}: React, Next.js, TypeScript, PostgreSQL.\\
+\noindent \textbf{Tools}: Make, Fastlane, GitHub Actions.
 
 %% Education
 
