cv: rewrite headline

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -97,10 +97,10 @@
 \SectionSpacing
 
 \noindent
-Software engineer with 10+ years developing for Apple platforms (iOS,
-macOS). Experience as team lead and architect on mobile projects in
-FinTech, Healthcare and Social domains. Occasional full-stack work
-(React, Next.js).
+Lead iOS Engineer with 10+ years on Apple platforms (iOS,
+macOS). Built and led mobile teams (up to 4 engineers), drove
+architecture across Healthcare, FinTech and Social domains. Full-stack
+capable (React, Next.js, PostgreSQL).
 
 %% Experience
 
@@ -154,7 +154,7 @@ Provide hands‑on engineering and technical consulting for businesses and start
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
 \item Managed a \textbf{team of 4 mobile developers (Android and iOS)}, tackling requirements processing,
-  delivery responsibilities and people management. 
+  delivery responsibilities and people management.
 \item Designed and led the Lead Generation feature to provide \textbf{personalized auto insurance plans}
   for customers \textit{(30+ million MAU, end of Q1 2022)}.
 \item Developed user's driving experience workflow, created brand new \textit{Driving} tab to see driving statistics
