cv: enhance /experience sections text

--- a/cv/main.tex
+++ b/cv/main.tex
@@ -120,7 +120,7 @@ Provide hands‑on engineering and technical consulting for businesses and start
   \setlength\itemsep{0cm}
 \item Wurthy: Developed a business web app (boosting sales and enabling monthly recurring revenue)
   and a customer web app (flexible checkout flow for buyers). Built products using
-  \textbf{Next.js, React 19, Tailwind, Postgress (Supabase), Prisma ORM}.
+  \textbf{Next.js, React 19, Tailwind, PostgreSQL (Supabase), Prisma ORM}.
 \item Loblaw Digital: Designed and delivered a \textbf{new subscription system} for in-store physical products,
   allowing users to manage recurring orders automatically (no need to reorder manually).
 \item Loblaw Digital: Championed the introduction of a \textbf{UseCase} domain layer within the iOS architecture,
@@ -171,11 +171,10 @@ Provide hands‑on engineering and technical consulting for businesses and start
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item Most of my contributions were in the
-  \href{https://apps.apple.com/us/app/betterme-weight-loss-workouts/id1264546236}{Health Coaching} and
-  \href{https://apps.apple.com/us/app/betterme-calm-sleep-meditate/id1363010081}{Mental Health} apps
-  including building both apps from scratch using the Redux architecture.
-\item Migrate an entire 'Mental Helth' iOS application \textbf{from VIPER to Redux} architecture.
+\item Build the \href{https://apps.apple.com/us/app/betterme-weight-loss-workouts/id1264546236}{Health
+    Coaching} and \href{https://apps.apple.com/us/app/betterme-mental-health/id1363010081}{Mental
+    Health} apps from scratch using \textbf{Redux architecture}.
+\item Migrated the Mental Health app from VIPER to \href{https://github.com/betterme-dev/ReduxCore}{Redux architecture}.
 \end{itemize}
 
 \SubSectionSpacing
@@ -185,12 +184,14 @@ Provide hands‑on engineering and technical consulting for businesses and start
 {Oct 2015 -- Sep 2018}
 {\href{https://www.cybervisiontech.com}{CyberVision, Inc.}}
 
-\noindent Project: \href{https://www.nuvocares.com/solutions}{Nuvo: applications for pregnant and doctor}.
+\noindent Project: \href{https://www.nuvocares.com/solutions}{Nuvo:
+  applications for pregnant women and doctor}.
 \noindent
 \begin{itemize}[label=-]
   \setlength\itemsep{0em}
-\item Developer iOS applications for manufactored FDA cleared device for remote nonstress tests for pregnant to monitor real-time health indicators.
-\item Architectured and developed a separated SDK to deal with device via Bluetooth Classic. Supported FDA and MFi device certification from engineering side.
+\item Developed iOS applications for manufactured FDA cleared device
+  for remote nonstress tests for pregnant women to monitor real-time health indicators.
+\item Architected and developed a separate SDK to deal with device via Bluetooth Classic. Supported FDA and MFi device certification from engineering side.
 \item The application was designed to scale in mind using VIPER design pattern and BDD testing approach (Quick, Nimble).
 \end{itemize}
 
